2003-09-13  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/AncestorChart.py (AncestorChart.__init__): Call calc()
	after self.standalone is defined. 

2003-09-12  Don Allingham  <dallingham@users.sourceforge.net>
	* src/BaseDoc.py: add init function to BaseDoc to be called after
	all graphics formats are defined
	* src/docgen/OpenOfficeDoc.py: fix rotate_print and center_print
	* src/plugins/AncestorChart.py: support BaseDoc.init
	* src/plugins/AncestorReport.py: support BaseDoc.init
	* src/plugins/BookReport.py: support BaseDoc.init
	* src/plugins/CustomBookText.py: support BaseDoc.init
	* src/plugins/DesGraph.py: support BaseDoc.init
	* src/plugins/DescendReport.py: support BaseDoc.init
	* src/plugins/DetAncestralReport.py: support BaseDoc.init
	* src/plugins/DetDescendantReport.py: support BaseDoc.init
	* src/plugins/FamilyGroup.py: support BaseDoc.init
	* src/plugins/FanChart.py: support BaseDoc.init
	* src/plugins/FtmStyleAncestors.py: support BaseDoc.init
	* src/plugins/FtmStyleDescendants.py: support BaseDoc.init
	* src/plugins/SimpleBookTitle.py: support BaseDoc.init
	* src/plugins/Ancestors.py: support BaseDoc.init

2003-09-11  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps_main.py: update family view after a GEDCOM import
	* src/plugins/TimeLine.py: draw grid after displaying text. Fixes
	a problem with OpenOffice

2003-09-10  Don Allingham  <dallingham@users.sourceforge.net>
	* src/docgen/PdfDoc.py: fix typo

2003-09-10  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/SimpleBookTitle.py: Introduce footer. 
	Introduce Image size option. Re-name item to Title Page (no longer
	simple I'm afraid). 

2003-09-10  Tim Waugh  <twaugh@redhat.com>
	* src/Relationship.py: Fixed typos in relationship descriptions.

2003-09-10  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/SimpleBookTitle.py: Add functionality to "From file".  
	* src/AddMedia.py: Make it a modal dialog. 
	* src/MediaView.py: Call AddMedia as modal dialog. 